name:                Vec
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/marklar/Vec#readme
license:             BSD3
license-file:        LICENSE
author:              Mark Wong-VanHaren
maintainer:          markwvh@gmail.com
copyright:           Mark Wong-VanHaren
category:            bobo
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Vec
                     , Nat
                     , Unfoldable
  build-depends:       base >= 4.7 && < 5
                     , ghc-typelits-natnormalise
  default-language:    Haskell2010

executable Vec-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Vec
  default-language:    Haskell2010

test-suite Vec-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Vec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/marklar/Vec
